extract-doctests/tests/ui/bad_attr_ident1.stderr
error: Expected inline_config, not bad_attr
 --> tests/ui/bad_attr_ident1.rs:3:20
  |
3 | #[extract_doctests(bad_attr(template = ""))]
  |                    ^^^^^^^^
